--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
@@ -23,4 +26,8 @@ a {
     color: white;
     background: black;
   }
+}
+.line-through{
+  text-decoration: line-through;
+  color: #c0433f;
 }
